finish Initialization.java testing